Remove non-Portable Ruby bootsnap support

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -2285,7 +2285,7 @@ Use this as the \fBbat\fP theme for syntax highlighting\.
 .RE
 .TP
 \fBHOMEBREW_BOOTSNAP\fP
-If set, use Bootsnap to speed up repeated \fBbrew\fP calls\. A no\-op when using Homebrew\[u2019]s vendored, relocatable Ruby on macOS (as it doesn\[u2019]t work)\.
+If set, use Bootsnap to speed up repeated \fBbrew\fP calls\. A no\-op on Linux when not using Homebrew\[u2019]s vendored, relocatable Ruby\.
 .TP
 \fBHOMEBREW_BOTTLE_DOMAIN\fP
 Use this URL as the download mirror for bottles\. If bottles at that URL are temporarily unavailable, the default bottle domain will be used as a fallback mirror\. For example, \fBHOMEBREW_BOTTLE_DOMAIN=http://localhost:8080\fP will cause all bottles to download from the prefix \fBhttp://localhost:8080/\fP\&\. If bottles are not available at \fBHOMEBREW_BOTTLE_DOMAIN\fP they will be downloaded from the default bottle domain\.
